--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,8 @@ a.helpIcon {
 }
 
 .column {
- flex: 50%;
+  margin: auto;
+  flex-grow: 2;
 }
 
 .content {
@@ -78,12 +79,12 @@ a.helpIcon {
   /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.85) 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  margin: 0 auto;
+  margin: auto;
   margin-top: 90px;
   box-sizing: border-box;
   width: 95%;
   max-width: 700px;
-  max-height: 90%;
+  max-height: 60%;
   border-radius: 3px;
 }
 
@@ -244,6 +245,7 @@ ul.deck-buttons > li {
 .divTableRow {
   display: table-row;
   font-size: 90%;
+  flex: 50%;
 }
 
 .divTableCellHeading {
@@ -568,7 +570,7 @@ button:focus {
     font-size: 16px;
     }
   .reset-button {
-    height: 30px;
+    height: 25px;
     font-size: 16px; 
     }
     ul.card-buttons {
