--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#1f7046', endColorstr='#1e6f73', GradientType=1);
   background-repeat: no-repeat;
 }
-v
+
 h1 {
   font-family: 'Lato', sans-serif;
   text-align: center;
@@ -77,7 +77,7 @@ a {
 
 .navbar {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ];
   position: absolute;
   top: 0;
@@ -100,18 +100,9 @@ a {
 }
 
 a.helpIcon {
-  color: #ffffff;
   font-family: 'Lato', sans-serif;
   font-size: 24px;
-  text-align: right;
-  margin-right: 24px;
-  padding-top: 16px;
-}
-
-a.resetIcon {
   color: #ffffff;
-  font-family: 'Lato', sans-serif;
-  font-size: 24px;
   text-align: right;
   margin-right: 24px;
   padding-top: 16px;
@@ -140,8 +131,7 @@ input[type=submit] {
 .content {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.85) 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  margin: auto;
-  margin-top: 90px;
+  margin-top: 100px;
   box-sizing: border-box;
   width: 95%;
   max-width: 700px;
@@ -152,6 +142,10 @@ input[type=submit] {
 a.credits {
   display: initial;
   font-weight: 300;
+}
+a.img {
+  max-width:100%;
+  height: 100vh
 }
 
 ol {
@@ -211,70 +205,29 @@ ul.card-buttons > li {
 }
 
 /*Outputs*/
-
-.divTable {
-  display: table;
-  width: 90%;
-  margin: 0 auto;
-  color: #FFFFFF;
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
   font-family: 'Lato', sans-serif;
+  min-width: 700px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table thead tr {
+  background-color: #007658;
+  color: #ffffff;
+  text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+  font-family: 'Lato', sans-serif;
+  color: #FFFFFF;
   text-align: center;
-}
-
-.divTableRow {
-  display: table-row;
-  font-size: 90%;
-  flex: 50%;
-}
-
-.divTableCellHeading {
-  border-bottom: 1px solid #5eab98;
-  font-size: 90%;
-  display: table-cell;
-  padding-bottom: 10px;
-  color: #155439;
-  font-weight: 600;
-}
-
-.divTableCell,
-.divTableHead {
-  display: table-cell;
-  padding: 3px 10px;
-}
-
-#divTableCell,
-#divTableHead {
-  display: table-cell;
-  padding: 3px 10px;
-}
-
-#divTableCell {
-  display: table-cell;
-  padding: 3px 10px;
-}
-
-#acesLeft,
-#result,
-#trueCount,
-#bet
-{
-  display: table-cell;
-  padding: 3px 10px;
-}
-
-.divTableHeading {
-  display: table-row;
-  font-weight: bold;
-}
-
-.divTableFoot {
-  background-color: #EEE;
-  display: table-footer-group;
-  font-weight: bold;
-}
-
-.divTableBody {
-  display: table-row-group;
+  margin: 0 auto;
+  padding: 12px 15px;
+  font-size: 26px;
 }
 
 button {
@@ -310,7 +263,7 @@ button:focus {
   text-transform: uppercase;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-  background: #d44052;
+  background: #d494a0;
   border: 0;
   cursor: pointer;
 }
